[package]
name = "craft-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6.1.0"
guess = { version = "0.2.0", features = ["web", "http", "tls", "quic"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
